; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/mmsys/extr_sounds.c_ImportSoundEntry.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/mmsys/extr_sounds.c_ImportSoundEntry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { %struct.TYPE_10__*, %struct.TYPE_11__* }

@MAX_PATH = common dso_local global i32 0, align 4
@KEY_READ = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@FALSE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ImportSoundEntry(i32 %0, i32 %1, i32 %2, i32* %3, i32* %4, %struct.TYPE_11__* %5) #0 {
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_11__*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = alloca i8*, align 8
  %20 = alloca i64, align 8
  %21 = alloca %struct.TYPE_10__*, align 8
  %22 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store %struct.TYPE_11__* %5, %struct.TYPE_11__** %13, align 8
  %23 = load i32, i32* @MAX_PATH, align 4
  %24 = zext i32 %23 to i64
  %25 = call i8* @llvm.stacksave()
  store i8* %25, i8** %19, align 8
  %26 = alloca i32, i64 %24, align 16
  store i64 %24, i64* %20, align 8
  %27 = load i32, i32* %10, align 4
  %28 = load i32*, i32** %11, align 8
  %29 = load i32, i32* @KEY_READ, align 4
  %30 = call i64 @RegOpenKeyEx(i32 %27, i32* %28, i32 0, i32 %29, i32* %14)
  %31 = load i64, i64* @ERROR_SUCCESS, align 8
  %32 = icmp ne i64 %30, %31
  br i1 %32, label %33, label %35

33:                                               ; preds = %6
  %34 = load i64, i64* @FALSE, align 8
  store i64 %34, i64* %7, align 8
  store i32 1, i32* %22, align 4
  br label %89

35:                                               ; preds = %6
  %36 = load i32, i32* %8, align 4
  %37 = load %struct.TYPE_11__*, %struct.TYPE_11__** %13, align 8
  %38 = load i32*, i32** %11, align 8
  %39 = call %struct.TYPE_10__* @FindLabel(i32 %36, %struct.TYPE_11__* %37, i32* %38)
  store %struct.TYPE_10__* %39, %struct.TYPE_10__** %21, align 8
  %40 = load %struct.TYPE_10__*, %struct.TYPE_10__** %21, align 8
  %41 = call i32 @ASSERT(%struct.TYPE_10__* %40)
  %42 = load i32, i32* %8, align 4
  %43 = load %struct.TYPE_10__*, %struct.TYPE_10__** %21, align 8
  %44 = call i32 @RemoveLabel(i32 %42, %struct.TYPE_10__* %43)
  %45 = load %struct.TYPE_11__*, %struct.TYPE_11__** %13, align 8
  %46 = load %struct.TYPE_10__*, %struct.TYPE_10__** %21, align 8
  %47 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %46, i32 0, i32 1
  store %struct.TYPE_11__* %45, %struct.TYPE_11__** %47, align 8
  %48 = load %struct.TYPE_11__*, %struct.TYPE_11__** %13, align 8
  %49 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %48, i32 0, i32 0
  %50 = load %struct.TYPE_10__*, %struct.TYPE_10__** %49, align 8
  %51 = load %struct.TYPE_10__*, %struct.TYPE_10__** %21, align 8
  %52 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %51, i32 0, i32 0
  store %struct.TYPE_10__* %50, %struct.TYPE_10__** %52, align 8
  %53 = load %struct.TYPE_10__*, %struct.TYPE_10__** %21, align 8
  %54 = load %struct.TYPE_11__*, %struct.TYPE_11__** %13, align 8
  %55 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %54, i32 0, i32 0
  store %struct.TYPE_10__* %53, %struct.TYPE_10__** %55, align 8
  store i64 0, i64* %15, align 8
  store i64 0, i64* %16, align 8
  br label %56

56:                                               ; preds = %81, %35
  %57 = call i64 @_countof(i32* %26)
  store i64 %57, i64* %18, align 8
  %58 = load i32, i32* %14, align 4
  %59 = load i64, i64* %16, align 8
  %60 = call i64 @RegEnumKeyEx(i32 %58, i64 %59, i32* %26, i64* %18, i32* null, i32* null, i32* null, i32* null)
  store i64 %60, i64* %17, align 8
  %61 = load i64, i64* %17, align 8
  %62 = load i64, i64* @ERROR_SUCCESS, align 8
  %63 = icmp eq i64 %61, %62
  br i1 %63, label %64, label %78

64:                                               ; preds = %56
  %65 = load i32, i32* %8, align 4
  %66 = load i32, i32* %9, align 4
  %67 = load i32, i32* %14, align 4
  %68 = load i32*, i32** %11, align 8
  %69 = load i32*, i32** %12, align 8
  %70 = load %struct.TYPE_11__*, %struct.TYPE_11__** %13, align 8
  %71 = load %struct.TYPE_10__*, %struct.TYPE_10__** %21, align 8
  %72 = call i64 @ImportSoundLabel(i32 %65, i32 %66, i32 %67, i32* %26, i32* %68, i32* %69, %struct.TYPE_11__* %70, %struct.TYPE_10__* %71)
  %73 = icmp ne i64 %72, 0
  br i1 %73, label %74, label %77

74:                                               ; preds = %64
  %75 = load i64, i64* %15, align 8
  %76 = add nsw i64 %75, 1
  store i64 %76, i64* %15, align 8
  br label %77

77:                                               ; preds = %74, %64
  br label %78

78:                                               ; preds = %77, %56
  %79 = load i64, i64* %16, align 8
  %80 = add nsw i64 %79, 1
  store i64 %80, i64* %16, align 8
  br label %81

81:                                               ; preds = %78
  %82 = load i64, i64* %17, align 8
  %83 = load i64, i64* @ERROR_SUCCESS, align 8
  %84 = icmp eq i64 %82, %83
  br i1 %84, label %56, label %85

85:                                               ; preds = %81
  %86 = load i32, i32* %14, align 4
  %87 = call i32 @RegCloseKey(i32 %86)
  %88 = load i64, i64* %15, align 8
  store i64 %88, i64* %7, align 8
  store i32 1, i32* %22, align 4
  br label %89

89:                                               ; preds = %85, %33
  %90 = load i8*, i8** %19, align 8
  call void @llvm.stackrestore(i8* %90)
  %91 = load i64, i64* %7, align 8
  ret i64 %91
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @RegOpenKeyEx(i32, i32*, i32, i32, i32*) #2

declare dso_local %struct.TYPE_10__* @FindLabel(i32, %struct.TYPE_11__*, i32*) #2

declare dso_local i32 @ASSERT(%struct.TYPE_10__*) #2

declare dso_local i32 @RemoveLabel(i32, %struct.TYPE_10__*) #2

declare dso_local i64 @_countof(i32*) #2

declare dso_local i64 @RegEnumKeyEx(i32, i64, i32*, i64*, i32*, i32*, i32*, i32*) #2

declare dso_local i64 @ImportSoundLabel(i32, i32, i32, i32*, i32*, i32*, %struct.TYPE_11__*, %struct.TYPE_10__*) #2

declare dso_local i32 @RegCloseKey(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
